--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "keypress": "0.2.1",
     "lodash": "4.17.4",
     "node-gameloop": "0.1.0",
-    "react": "^0.14.7",
+    "react": "0.14.7",
     "react-blessed": "0.1.7",
     "react-redux": "^5.0.1",
-    "redux": "^3.6.0",
+    "redux": "3.6.0",
     "redux-create-reducer": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
     "babel-eslint": "7.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
