--- a/package.json
+++ b/package.json
@@ -13,41 +13,75 @@
   "bugs": {
     "url": "https://github.com/rafalmaciejewski/noderogue/issues"
   },
-  "license": "MIT",
-  "author": "Rafał Maciejewski <rafaljestsuper@gmail.com>",
-  "main": "dist/app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rafalmaciejewski/noderogue.git"
   },
+  "license": "MIT",
+  "author": "Rafał Maciejewski <rafaljestsuper@gmail.com>",
+  "main": "lib/index.js",
+  "bin": {
+    "noderogue": "./bin/noderogue.js"
+  },
+  "files": [
+    "lib",
+    "bin"
+  ],
   "scripts": {
-    "start": "babel-node lib/app.js",
-    "lint": "eslint .",
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "start": "ts-node src/run.tsx",
+    "clean": "rimraf lib",
+    "game": "node lib/run.js",
+    "watch": "npm run build -- -w",
+    "release": "semantic-release",
+    "lint": "eslint --max-warnings 0 './src/**/*.{ts,tsx}'",
     "lint:fix": "eslint . --fix"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "blessed": "0.1.81",
-    "blessed-contrib": "4.6.5",
-    "chalk": "1.1.3",
+    "blessed-contrib": "4.8.21",
     "chalk256": "5.1.0",
     "keypress": "0.2.1",
-    "lodash": "4.17.4",
-    "node-gameloop": "0.1.0",
-    "react": "0.14.7",
-    "react-blessed": "0.1.7",
-    "react-redux": "^5.0.1",
-    "redux": "3.6.0",
-    "redux-create-reducer": "^1.1.1"
+    "lodash": "4.17.21",
+    "node-gameloop": "0.1.4",
+    "react": "17.0.2",
+    "react-blessed": "0.7.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.3",
+    "redux": "4.0.5"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-eslint": "7.1.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
-    "babel-register": "6.18.0",
-    "eslint": "3.12.2",
-    "eslint-plugin-react": "6.8.0"
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/commit-analyzer": "8.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@semantic-release/github": "7.2.0",
+    "@semantic-release/npm": "7.1.0",
+    "@semantic-release/release-notes-generator": "9.0.2",
+    "@types/node": "14.14.37",
+    "@types/react": "17.0.3",
+    "@types/react-blessed": "0.3.2",
+    "@types/react-dom": "17.0.3",
+    "@typescript-eslint/eslint-plugin": "4.20.0",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.23.0",
+    "eslint-config-getresponse": "5.1.5",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-jest": "24.3.3",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "4.3.8",
+    "lint-staged": "10.5.4",
+    "prettier": "2.2.1",
+    "rimraf": "3.0.2",
+    "semantic-release": "17.4.2",
+    "ts-node": "9.1.1",
+    "typescript": "4.2.3"
   }
 }
