fix: change npm package name to follow the rules

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "noderogue",
+  "name": "noderogue-game",
   "version": "1.0.0",
   "description": "Roguelike dungeon crawler for terminals",
   "keywords": [
