fix: update tile colors, replace outdated library for terminal colors

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "dependencies": {
     "blessed": "0.1.81",
     "blessed-contrib": "4.8.21",
-    "chalk256": "5.1.0",
+    "chalk": "4.1.0",
     "inversify": "5.0.5",
     "keypress": "0.2.1",
     "lodash": "4.17.21",
